fix: dockerfile and docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,45 @@
-version: '3.8'
+version: "3.8"
 
 services:
-  app:
-    image: my-spring-boot-app
-    build: .
+  client-backend:
+    # image: client:0.0.1
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8080:8080"
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5433/postgres
-      - SPRING_DATASOURCE_USERNAME=postgres
-      - SPRING_DATASOURCE_PASSWORD=levonarmen445644
     depends_on:
-      - db
-
-  db:
-    image: postgres:13.1-alpine
+      - service-db
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=levonarmen445644
-    ports:
-      - "5433:5432"
+      - SERVER_PORT=8080
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://service-db/books_db
+      - SPRING_DATASOURCE_USERNAME=username
+      - SPRING_DATASOURCE_PASSWORD=password
 
+  service-db:
+    image: postgres:14.7-alpine
+    environment:
+      POSTGRES_USER: username
+      POSTGRES_PASSWORD: password
+    # ports:
+    #   - "15432:5432"
+    volumes:
+      - ./infrastructure/db/create_db.sql:/docker-entrypoint-initdb.d/create_db.sql
+      - db-data:/var/lib/postgresql/data
+    restart: unless-stopped
+
+  pgadmin:
+    container_name: pgadmin4_container
+    image: dpage/pgadmin4:7
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
+    ports:
+      - "5050:80"
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+
+volumes:
+  db-data:
+  pgadmin-data:
