--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-spring.application.name=mentor
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=levonarmen445644
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+server.port=8080
+
+spring.datasource.url=jdbc:postgresql://localhost:15432/books_db
+spring.datasource.username=username
+spring.datasource.password=password
+
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
