--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
     environment:
       POSTGRES_USER: username
       POSTGRES_PASSWORD: password
-    # ports:
-    #   - "15432:5432"
+    ports:
+      - "15432:5432"
     volumes:
       - ./infrastructure/db/create_db.sql:/docker-entrypoint-initdb.d/create_db.sql
       - db-data:/var/lib/postgresql/data
