--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8080
+# server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:15432/books_db
-spring.datasource.username=username
-spring.datasource.password=password
+# spring.datasource.url=jdbc:postgresql://localhost:15432/books_db
+# spring.datasource.username=username
+# spring.datasource.password=password
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
