--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,14 @@ services:
       - service-db
     environment:
       - SERVER_PORT=8080
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://service-db/books_db
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://service-db/mentorai
       - SPRING_DATASOURCE_USERNAME=username
       - SPRING_DATASOURCE_PASSWORD=password
 
   service-db:
     image: postgres:14.7-alpine
     environment:
+      POSTGRES_DB: mentorai
       POSTGRES_USER: username
       POSTGRES_PASSWORD: password
     ports:
