--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,35 @@
 version: "3.8"
 
 services:
-  client-backend:
-    # image: client:0.0.1
+  backend:
+    container_name: backend
     build:
       context: .
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
     depends_on:
-      - service-db
+      - postgres
     environment:
       - SERVER_PORT=8080
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://service-db/mentorai
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres/postgres
       - SPRING_DATASOURCE_USERNAME=username
       - SPRING_DATASOURCE_PASSWORD=password
 
-  service-db:
+  postgres:
+    container_name: postgres
     image: postgres:14.7-alpine
     environment:
-      POSTGRES_DB: mentorai
       POSTGRES_USER: username
       POSTGRES_PASSWORD: password
     ports:
-      - "15432:5432"
+      - "5432:5432"
     volumes:
-      - ./infrastructure/db/create_db.sql:/docker-entrypoint-initdb.d/create_db.sql
       - db-data:/var/lib/postgresql/data
     restart: unless-stopped
 
   pgadmin:
-    container_name: pgadmin4_container
+    container_name: pgadmin
     image: dpage/pgadmin4:7
     restart: always
     environment:
